--- a/Proposal/proposal/src/main/AndroidManifest.xml
+++ b/Proposal/proposal/src/main/AndroidManifest.xml
@@ -14,15 +14,26 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="ch.templer.activities.StartActivity"
+            android:name=".StartActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ch.templer.activities.FragmentContainerActivity" android:label="@string/title_activity_main" android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".FragmentContainerActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <uses-library android:name="com.google.android.maps" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDnmsHZgwosGCDiwt25vjd84N-EleZasvM" />
+        <permission
+            android:name="com.example.mapdemo.permission.MAPS_RECEIVE"
+            android:protectionLevel="signature" />
     </application>
 
 </manifest>
