--- a/Proposal/proposal/build.gradle
+++ b/Proposal/proposal/build.gradle
@@ -24,10 +24,28 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile files('libs/httpclient-android-4.3.3.jar')
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:support-v4:23.3.0'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    compile 'com.android.support:cardview-v7:21.0.+'
+
+    compile 'io.github.yavski:fab-speed-dial:1.0.4'
+
+
+
+    compile 'com.github.alexkolpa:floating-action-button-toolbar:0.5.1'
+    compile ('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
+        transitive = true;
+    }
+
+
+}
+
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
 }
