--- a/Proposal/proposal/build.gradle
+++ b/Proposal/proposal/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 
     compile 'io.github.yavski:fab-speed-dial:1.0.4'
 
-
+    //stable
+    compile 'com.devbrackets.android:exomedia:2.5.6'
 
     compile 'com.github.alexkolpa:floating-action-button-toolbar:0.5.1'
     compile ('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
