--- a/Proposal/proposal/build.gradle
+++ b/Proposal/proposal/build.gradle
@@ -18,32 +18,43 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile files('libs/httpclient-android-4.3.3.jar')
+    //compile files('libs/httpclient-android-4.3.3.jar')
+
+    // Jackson JSON mapper
+    //stable
+    compile('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
+        transitive = true;
+    }
+
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
-    compile 'com.android.support:cardview-v7:21.0.+'
-
+    compile 'com.android.support:cardview-v7:23.3.0'
     compile 'io.github.yavski:fab-speed-dial:1.0.4'
-
-    //stable
+    compile 'com.fasterxml.jackson.core:jackson-core:2.7.3'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.3'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
     compile 'com.devbrackets.android:exomedia:2.5.6'
-
     compile 'com.github.alexkolpa:floating-action-button-toolbar:0.5.1'
-    compile ('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
-        transitive = true;
-    }
-
-
 }
+
+
 
 repositories {
     maven {
